# serverless-chat-api

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  LICENSE  Makefile  README.md  README_DEPLOY.md  demo.sh  deploy-fresh.sh  docker-compose.yml  pyproject.toml  requirements.txt  trigger.txt
.github/workflows/: ci.yml  cleanup.yml  deploy.yml  pages.yml  test.yml
chat_api/: __init__.py  __main__.py  api.py  app.py  aws.py  chat.py  config.py  core.py  exceptions.py  factory.py  handlers.py  lambda_handler.py  middleware.py  models.py  providers.py  repomix-output.md  retry.py  storage.py  types.py
chat_api/storage/: __init__.py  cache.py  dynamodb.py  protocols.py  sqlite.py
docs/: ARCHITECTURE.md  class-diagram.puml  component-diagram-clean.puml  component-diagram-clean2.puml  component-diagram.puml  index.html  render-diagram.md
docs/adr/: ADR-001-architecture-patterns.md  ADR-001-minimal-architecture.md  ADR-002-complete-features.md  ADR-002-data-storage.md  ADR-003-deployment-strategy.md  ADR-003-quality-operations.md  ADR-004-integrations-config.md  ADR-004-repository-pattern.md
docs/diagrams/: 09_happy_path_sequence.puml  10_cache_hit_sequence.puml  11_error_sequence.puml  12_startup_sequence.puml  generate_final_diagrams.py  generate_improved_diagrams.py  generate_simple_diagrams.py  sequence_diagrams.py
docs/diagrams/python/: 01_system_architecture.py  01_system_architecture_real.py  02_request_flow.py  03_authentication_flow.py  03_authentication_flow_real.py  03_authentication_flow_v2.py  03_authentication_flow_v3.py  04_data_transformations.py  05_error_handling.py  05_error_handling_real.py  05_error_handling_v2.py  05_error_handling_v3.py  06_runtime_dependencies.py  07_deployment_architecture.py  08_protocol_patterns.py  08_protocol_patterns_real.py  08_protocol_patterns_v2.py  08_protocol_patterns_v3.py  README.md  custom_icons.py  diagram_helpers.py  download_better_icons.sh  download_icons_fixed.sh  download_real_icons.sh  generate.py  generate_all.py  generate_real.py  generate_v3.py
docs/diagrams/python/architecture/: 01_system_overview.py  07_data_flow.py  README.md
docs/diagrams/python/deployment/: 03_deployment_options.py  10_scaling_strategy.py  README.md
docs/diagrams/python/flows/: 02_request_journey.py  06_authentication_flow.py  09_startup_sequence.py  README.md
docs/diagrams/python/operations/: 05_error_handling.py  README.md
docs/diagrams/python/performance/: 04_caching_impact.py  08_cost_analysis.py  README.md
docs/diagrams/python/shared/: custom_icons.py  diagram_styles.py
docs/v3-adrs/: ADR-001-minimal-architecture.md
iac/terraform/: .gitignore  Makefile  build_layer.sh  main.tf  outputs.tf  terraform.tfvars.example  variables.tf
src/: __init__.py  main.py
src/chat/: __init__.py  api.py  api_refactored.py  models.py  service.py  service_refactored.py
src/shared/: __init__.py  cache.py  config.py  database.py  db_pool.py  dependencies.py  exceptions.py  llm.py  rate_limiter.py  retry.py
tests/: __init__.py  conftest.py  mock_provider.py  test_api.py  test_api_error_handling.py  test_aws.py  test_config.py  test_core.py  test_e2e.py  test_e2e_integration.py  test_error_recovery.py  test_handlers.py  test_lifespan.py  test_models.py  test_production_storage.py  test_providers.py  test_retry.py  test_storage.py
tests/integration/: test_api.py  test_app_integration.py
tests/unit/: test_api.py  test_api_endpoints.py  test_cache.py  test_chat_models.py  test_chat_service.py  test_config.py  test_database.py  test_error_handlers.py  test_exceptions.py  test_factory.py  test_llm.py  test_middleware.py  test_models.py  test_provider_complete.py  test_providers.py  test_retry.py  test_service.py  test_storage.py
