[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "chat-api"
version = "1.0.0"
description = "A simple LLM chat service with Pythonic design"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "Chat API Team"}]
keywords = ["api", "llm", "chat", "fastapi", "python"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Framework :: FastAPI",
]

dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "databases[sqlite,postgresql]",  # Async database
    "redis[hiredis]",                # Cache (optional)
    "litellm",                       # Universal LLM
    "slowapi",                       # Rate limiting
    "tenacity",                      # Retry
    "pydantic-settings",             # Config
    "sqlalchemy",                    # For database tables
]

[project.optional-dependencies]
dev = [
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
    "httpx>=0.24.0",
    "ruff>=0.1.0",
]

test = [
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
    "httpx>=0.24.0",
]

[project.scripts]
chat-api = "chat_api.__main__:main"

[project.urls]
Homepage = "https://github.com/your-org/chat-api"
Repository = "https://github.com/your-org/chat-api.git"
Issues = "https://github.com/your-org/chat-api/issues"

[tool.hatch.build.targets.wheel]
packages = ["chat_api"]

[tool.hatch.build.targets.sdist]
include = ["/chat_api", "/tests", "/README.md", "/LICENSE"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "UP", "C4", "SIM"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["chat_api"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
asyncio_default_fixture_loop_scope = "session"

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
    "pytest-cov>=6.2.1",
]
